--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         else if (object.id == 6 || object.id == 7 || object.id == 8 || object.id == 11 || object.id == 12 || object.id == 13 || object.id == 16 || object.id == 17 || object.id == 18) {
             mid(object.id);
         }
-        else if ((object.id == 5) || (object.id == 10) || (object.id == 15)) {
+        else if (object.id == 5 || object.id == 10 || object.id == 15) {
             leftEdge(object.id);
         }
         else if (object.id == 9 || object.id == 14 || object.id == 19) {
@@ -152,75 +152,87 @@
     }
 
     function upperEdge(index) {
-        if (board[index - 1]) {
+
+        if (board[parseInt(index) - 1]) {
             numberOfBombsToDisplay++;
-            console.log(numberOfBombsToDisplay);
+            console.log("bomby " + numberOfBombsToDisplay);
         }
-        if (board[index + 1]) {
+        if (board[parseInt(index) + 1]) {
             numberOfBombsToDisplay++;
-            console.log(numberOfBombsToDisplay);
+            console.log("bomby " + numberOfBombsToDisplay);
         }
-        if (board[index + 4]) {
+        if (board[parseInt(index) + 4]) {
             numberOfBombsToDisplay++;
-            console.log(numberOfBombsToDisplay);
+            console.log("bomby " + numberOfBombsToDisplay);
         }
-        if (board[index + 5]) {
+        if (board[parseInt(index) + 5]) {
             numberOfBombsToDisplay++;
-            console.log(numberOfBombsToDisplay);
+            console.log("bomby " + numberOfBombsToDisplay);
         }
-        if (board[index + 6]) {
+        if (board[parseInt(index) + 6]) {
             numberOfBombsToDisplay++;
-            console.log(numberOfBombsToDisplay);
+            console.log("bomby " + numberOfBombsToDisplay);
         }
-        document.getElementById(index.toString()).innerHTML = numberOfBombsToDisplay.toString();
+        console.log("index " + typeof index);
+        console.log("bomby " + numberOfBombsToDisplay);
+        document.getElementById(index).innerHTML = numberOfBombsToDisplay.toString();
         remainingBombs--;
         displayRemainingBombs();
     }
 
     function mid(index) {
-        if (board[index - 6]) {
+        if (board[parseInt(index) - 6]) {
+            console.log(index - 6);
             numberOfBombsToDisplay++;
         }
-        if (board[index - 5]) {
+        if (board[parseInt(index) - 5]) {
             numberOfBombsToDisplay++;
+            console.log(index - 5);
         }
-        if (board[index - 4]) {
+        if (board[parseInt(index) - 4]) {
             numberOfBombsToDisplay++;
+            console.log(index - 4);
         }
-        if (board[index - 1]) {
+        if (board[parseInt(index) - 1]) {
             numberOfBombsToDisplay++;
+            console.log(index - 1);
         }
-        if (board[index + 1]) {
+        if (board[parseInt(index) + 1]) {
             numberOfBombsToDisplay++;
+            console.log(index + 1);
         }
-        if (board[index + 4]) {
+        if (board[parseInt(index) + 4]) {
             numberOfBombsToDisplay++;
+            console.log(index + 4);
         }
-        if (board[index + 5]) {
+        if (board[parseInt(index) + 5]) {
             numberOfBombsToDisplay++;
+            console.log(index + 5);
         }
-        if (board[index + 6]) {
+        if (board[parseInt(index) + 6]) {
             numberOfBombsToDisplay++;
+            console.log(index + 6);
         }
+        console.log(index + 6);
         document.getElementById(index.toString()).innerHTML = numberOfBombsToDisplay.toString();
         remainingBombs--;
         displayRemainingBombs();
     }
 
     function leftEdge(index) {
-        if (board[index - 5]) {
+        if (board[parseInt(index) - 5]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index - 4]) {
+        if (board[parseInt(index) - 4]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index + 1]) {
+        if (board[parseInt(index) + 1]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index + 5]) {
+        if (board[parseInt(index) + 5]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index + 6]) {
+        if (board[parseInt(index) + 6]) {
             numberOfBombsToDisplay++;
         }
         document.getElementById(index.toString()).innerHTML = numberOfBombsToDisplay.toString();
@@ -229,19 +241,19 @@
     }
 
     function rightEdge(index) {
-        if (board[index - 5]) {
+        if (board[parseInt(index) - 5]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index - 6]) {
+        if (board[parseInt(index) - 6]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index - 1]) {
+        if (board[parseInt(index) - 1]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index + 4]) {
+        if (board[parseInt(index) + 4]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index + 5]) {
+        if (board[parseInt(index) + 5]) {
             numberOfBombsToDisplay++;
         }
         document.getElementById(index.toString()).innerHTML = numberOfBombsToDisplay.toString();
@@ -250,19 +262,19 @@
     }
 
     function lowerEdge(index) {
-        if (board[index - 6]) {
+        if (board[parseInt(index) - 6]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index - 5]) {
+        if (board[parseInt(index) - 5]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index - 4]) {
+        if (board[parseInt(index) - 4]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index - 1]) {
+        if (board[parseInt(index) - 1]) {
             numberOfBombsToDisplay++;
         }
-        if (board[index + 1]) {
+        if (board[parseInt(index) + 1]) {
             numberOfBombsToDisplay++;
         }
         document.getElementById(index.toString()).innerHTML = numberOfBombsToDisplay.toString();
