--- a/index.html
+++ b/index.html
@@ -8,39 +8,39 @@
 <body onload="plantBombs()">
 <table>
     <tr>
-        <td onclick="playerMove(this)" id="0">0</td>
-        <td onclick="playerMove(this)" id="1">1</td>
-        <td onclick="playerMove(this)" id="2">2</td>
-        <td onclick="playerMove(this)" id="3">3</td>
-        <td onclick="playerMove(this)" id="4">4</td>
+        <td onclick="playerMove(this)" id="0"></td>
+        <td onclick="playerMove(this)" id="1"></td>
+        <td onclick="playerMove(this)" id="2"></td>
+        <td onclick="playerMove(this)" id="3"></td>
+        <td onclick="playerMove(this)" id="4"></td>
     </tr>
     <tr>
-        <td onclick="playerMove(this)" id="5">5</td>
-        <td onclick="playerMove(this)" id="6">6</td>
-        <td onclick="playerMove(this)" id="7">7</td>
-        <td onclick="playerMove(this)" id="8">8</td>
-        <td onclick="playerMove(this)" id="9">9</td>
+        <td onclick="playerMove(this)" id="5"></td>
+        <td onclick="playerMove(this)" id="6"></td>
+        <td onclick="playerMove(this)" id="7"></td>
+        <td onclick="playerMove(this)" id="8"></td>
+        <td onclick="playerMove(this)" id="9"></td>
     </tr>
     <tr>
-        <td onclick="playerMove(this)" id="10">10</td>
-        <td onclick="playerMove(this)" id="11">11</td>
-        <td onclick="playerMove(this)" id="12">12</td>
-        <td onclick="playerMove(this)" id="13">13</td>
-        <td onclick="playerMove(this)" id="14">14</td>
+        <td onclick="playerMove(this)" id="10"></td>
+        <td onclick="playerMove(this)" id="11"></td>
+        <td onclick="playerMove(this)" id="12"></td>
+        <td onclick="playerMove(this)" id="13"></td>
+        <td onclick="playerMove(this)" id="14"></td>
     </tr>
     <tr>
-        <td onclick="playerMove(this)" id="15">15</td>
-        <td onclick="playerMove(this)" id="16">16</td>
-        <td onclick="playerMove(this)" id="17">17</td>
-        <td onclick="playerMove(this)" id="18">18</td>
-        <td onclick="playerMove(this)" id="19">19</td>
+        <td onclick="playerMove(this)" id="15"></td>
+        <td onclick="playerMove(this)" id="16"></td>
+        <td onclick="playerMove(this)" id="17"></td>
+        <td onclick="playerMove(this)" id="18"></td>
+        <td onclick="playerMove(this)" id="19"></td>
     </tr>
     <tr>
-        <td onclick="playerMove(this)" id="20">20</td>
-        <td onclick="playerMove(this)" id="21">21</td>
-        <td onclick="playerMove(this)" id="22">22</td>
-        <td onclick="playerMove(this)" id="23">23</td>
-        <td onclick="playerMove(this)" id="24">24</td>
+        <td onclick="playerMove(this)" id="20"></td>
+        <td onclick="playerMove(this)" id="21"></td>
+        <td onclick="playerMove(this)" id="22"></td>
+        <td onclick="playerMove(this)" id="23"></td>
+        <td onclick="playerMove(this)" id="24"></td>
     </tr>
 </table>
 
