Added button to start new game

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 
 <div id="remainingBombs"></div>
 
+<button class="new-game-button" onclick="location.reload()">Start new game</button>
+
 <script>
     var board = [false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false];
     var isFieldClicked = [false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false, false];
